# paddleocr_app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FILE_STRUCTURE.txt  IMPROVEMENTS.md  INSTALLATION_SUMMARY.md  PHASE_1_2_FEATURES.md  PHASE_3_4_FEATURES.md  QUICKSTART.md  README.md  api_server.py  app.py  cache_manager.py  config.py  database.py  docker-compose.yml  document_processor.py  image_enhancer.py  logger_config.py  ocr_engine.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  sample_generator.py  table_recognizer.py  test_ocr.py  utils.py
.github/workflows/: ci.yml
samples/: README.md  sample.txt  sample_invoice.txt  sample_multilang.txt
tests/: __init__.py  conftest.py  test_document_processor.py  test_integration.py  test_ocr_engine.py  test_utils.py
